Made encryption disabled in config client

--- a/configserver/src/main/resources/application.properties
+++ b/configserver/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.cloud.config.server.git.clone-on-restart=true
 spring.application.name=cloudConfig
 spring.cloud.config.server.encrypt.key=true
 encrypt.key=uTSqb9grs1+vUv3iN8lItC0kl65lMG+8
-spring.cloud.config.server.encrypt.enabled=true
+spring.cloud.config.server.encrypt.enabled=false
